// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast render for Audio changed to english event model 1`] = `
<div
  class="MuiSnackbar-root MuiSnackbar-anchorOriginTopCenter css-zzms1-MuiSnackbar-root"
  role="presentation"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-itv364-MuiPaper-root"
    direction="down"
    style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    <div
      class="MuiStack-root css-1q36rmd-MuiStack-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-1mwz4t-MuiSvgIcon-root-MuiIcon-root"
        data-testid="AudiotrackOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6zm-2 16c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
        />
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body1 css-fldieq-MuiTypography-root"
      >
        Audio changed to English
      </p>
    </div>
  </div>
</div>
`;

exports[`Toast render for Audio changed to original event model 1`] = `
<div
  class="MuiSnackbar-root MuiSnackbar-anchorOriginTopCenter css-zzms1-MuiSnackbar-root"
  role="presentation"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-itv364-MuiPaper-root"
    direction="down"
    style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    <div
      class="MuiStack-root css-1q36rmd-MuiStack-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-1mwz4t-MuiSvgIcon-root-MuiIcon-root"
        data-testid="AudiotrackOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6zm-2 16c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
        />
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body1 css-fldieq-MuiTypography-root"
      >
        Audio changed to Original
      </p>
    </div>
  </div>
</div>
`;

exports[`Toast render for Play fastest event model 1`] = `
<div
  class="MuiSnackbar-root MuiSnackbar-anchorOriginTopCenter css-zzms1-MuiSnackbar-root"
  role="presentation"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-itv364-MuiPaper-root"
    direction="down"
    style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    <div
      class="MuiStack-root css-1q36rmd-MuiStack-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-1mwz4t-MuiSvgIcon-root-MuiIcon-root"
        data-testid="SpeedOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="m20.38 8.57-1.23 1.85a8 8 0 0 1-.22 7.58H5.07A8 8 0 0 1 15.58 6.85l1.85-1.23A10 10 0 0 0 3.35 19a2 2 0 0 0 1.72 1h13.85a2 2 0 0 0 1.74-1 10 10 0 0 0-.27-10.44z"
        />
        <path
          d="M10.59 15.41a2 2 0 0 0 2.83 0l5.66-8.49-8.49 5.66a2 2 0 0 0 0 2.83z"
        />
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body1 css-fldieq-MuiTypography-root"
      >
        1.5x
      </p>
    </div>
  </div>
</div>
`;

exports[`Toast render for Play normal event model 1`] = `null`;

exports[`Toast render for Play slowest event model 1`] = `
<div
  class="MuiSnackbar-root MuiSnackbar-anchorOriginTopCenter css-zzms1-MuiSnackbar-root"
  role="presentation"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-itv364-MuiPaper-root"
    direction="down"
    style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    <div
      class="MuiStack-root css-1q36rmd-MuiStack-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-1mwz4t-MuiSvgIcon-root-MuiIcon-root"
        data-testid="SpeedOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="m20.38 8.57-1.23 1.85a8 8 0 0 1-.22 7.58H5.07A8 8 0 0 1 15.58 6.85l1.85-1.23A10 10 0 0 0 3.35 19a2 2 0 0 0 1.72 1h13.85a2 2 0 0 0 1.74-1 10 10 0 0 0-.27-10.44z"
        />
        <path
          d="M10.59 15.41a2 2 0 0 0 2.83 0l5.66-8.49-8.49 5.66a2 2 0 0 0 0 2.83z"
        />
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body1 css-fldieq-MuiTypography-root"
      >
        0.5x
      </p>
    </div>
  </div>
</div>
`;

exports[`Toast render for Subtitle off event model 1`] = `
<div
  class="MuiSnackbar-root MuiSnackbar-anchorOriginTopCenter css-zzms1-MuiSnackbar-root"
  role="presentation"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-itv364-MuiPaper-root"
    direction="down"
    style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    <div
      class="MuiStack-root css-1q36rmd-MuiStack-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-1mwz4t-MuiSvgIcon-root-MuiIcon-root"
        data-testid="ClosedCaptionDisabledOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M13 10c0-.55.45-1 1-1h3c.55 0 1 .45 1 1v1h-1.5v-.5h-2v1L13 10zm3.5 3.5 1.21 1.21c.18-.19.29-.44.29-.71v-1h-1.5v.5zM8.83 6H19v10.17l1.98 1.98c0-.05.02-.1.02-.16V6c0-1.1-.9-2-2-2H6.83l2 2zm10.95 16.61L17.17 20H5c-1.11 0-2-.9-2-2V6c0-.05.02-.1.02-.15L1.39 4.22 2.8 2.81l18.38 18.38-1.4 1.42zM7.5 13.5h2V13h.67l-2.5-2.5H7.5v3zm7.67 4.5L11 13.83V14c0 .55-.45 1-1 1H7c-.55 0-1-.45-1-1v-4c0-.32.16-.59.4-.78L5 7.83V18h10.17z"
        />
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body1 css-fldieq-MuiTypography-root"
      >
        Subtitles off
      </p>
    </div>
  </div>
</div>
`;

exports[`Toast render for Subtitle on event model 1`] = `
<div
  class="MuiSnackbar-root MuiSnackbar-anchorOriginTopCenter css-zzms1-MuiSnackbar-root"
  role="presentation"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-itv364-MuiPaper-root"
    direction="down"
    style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    <div
      class="MuiStack-root css-1q36rmd-MuiStack-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-1mwz4t-MuiSvgIcon-root-MuiIcon-root"
        data-testid="ClosedCaptionOffOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 4H5c-1.11 0-2 .9-2 2v12c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H5V6h14v12z"
        />
        <path
          d="M7 15h3c.55 0 1-.45 1-1v-1H9.5v.5h-2v-3h2v.5H11v-1c0-.55-.45-1-1-1H7c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1zm7 0h3c.55 0 1-.45 1-1v-1h-1.5v.5h-2v-3h2v.5H18v-1c0-.55-.45-1-1-1h-3c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1z"
        />
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body1 css-fldieq-MuiTypography-root"
      >
        Subtitles on
      </p>
    </div>
  </div>
</div>
`;

exports[`Toast render for null model 1`] = `null`;
